apache-deployment.yml
kind: Deployment
apiVersion: v1
metadata:
  name: apache-deployment
  namespace: apache
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: apache
  template:
    metadata:
      name: apache
      labels: 
        app: apache
    spec:
      containers:
      - name: apache
        images: httpd:latest
        ports: 
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
