init-container.yml
kind: Pod
apiVersion: v1
metadata: 
  name: init-test
spec:
  containers:
  - name: main-container
    image: busybox:latest
    command: ["sh","-c","echo Main container started"]
