probes.yml
apiVersion: v1
kind: Pod

metadata:
  name: backend

spec:
  containers:
    - name: backend
      image: my-backend:1.0

      ports:
        - containerPort: 8080

      startupProbe:
        httpGet:
          path: /health
          port: 8080
        failureThreshold: 30
        periodSeconds: 10

      livenessProbe:
        httpGet:
          path: /health
          port: 8080
        periodSeconds: 10

      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
        periodSeconds: 5
