statefulSet.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mysql-StatefulSet
  namespace: mysql
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  templates:
  metadata:
  labels:
    app: mysql
  spec:
    containers:
    - name: mysql
      image: mysql:8.0
      ports:
      - containerPort: 3306
      volumeMounts:
      - name: mysql-data
        mountpath: /var/lib/mysql
    volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
