apache-service.yml
kind: Service
apiVersion: v1
metadata:
  name: apache-service
  namespace: apache
spec:
  selector:
    app: apache
ports: 
  - protocol: TCP
    port: 80 #exposed port in cluster
    targetPort: 80 #container port
type: ClusterIP
